--- a/.env
+++ b/.env
@@ -4,14 +4,22 @@ DB_USERNAME=vpn
 DB_PASSWORD=hameedgoovi123
 DB_DATABASE=vpn
 
-SERVER_PORT=80
+SERVER_PORT=3000
 SERVER_HOST=0.0.0.0
-
+VPN_SERVICE_NAME=vpn-api   
 WIREGUARD_CONFIG_PATH=/etc/wireguard
 WIREGUARD_INTERFACE=wg0
 VPN_SERVER_PUBLIC_IP=81.30.161.139
 VPN_SERVER_INTERNAL_IP=192.168.88.230
 VPN_SERVER_PORT=51820
+
+# Sudo Configuration (choose one method)
+# Method 1: Use passwordless sudo (RECOMMENDED - configure in /etc/sudoers.d/)
+SUDO_METHOD=passwordless
+
+# Method 2: Use sudo with password (LESS SECURE - only for development)
+# SUDO_METHOD=password
+# SUDO_PASSWORD=your_sudo_password_here
 
 IP_GEOLOCATION_API_KEY=
 
